--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,7 +20,7 @@ jobs:
         uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg
+          svg_out_path: dist/snake.svg
           gif_out_path: dist/snake.gif
 
 
