--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,7 +19,8 @@ jobs:
         uses: Platane/snk@master
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.gif
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
 
       - name: push snake.svg to the output branch
