--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,11 +16,10 @@ jobs:
 
     steps:
       - name: generate snake.svg
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: dist/snake.svg
 
 
       - name: push snake.svg to the output branch
